--- a/.gitattributes
+++ b/.gitattributes
@@ -13,7 +13,9 @@
 # Avoid exporting development files to release archive
 /.* export-ignore
 /continuous-integration export-ignore
-/docker-compose.yaml export-ignore
+/compose.yml export-ignore
+/dev-assets export-ignore
+/Vagrantfile export-ignore
 
 # Keep editorconfig for ease of editing of product files
 /.editorconfig -export-ignore
