--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@
 # Do track GitLab CI configuration file
 !/.gitlab-ci.yml
 
+# Do track ShellCheck configuration file
+!/.shellcheckrc
+
 # Don't track common backup filename extensions
 *~
 *.bak*
@@ -88,3 +91,6 @@
 
 # Don't track continuous integration virtual environments
 /continuous-integration/venv/
+
+# Don't track unpacked product files
+/migrate-rootfs-utilities-*/
