fix(git): Don't track fake destination root filesystem used in tests
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,6 @@
 
 # Don't track unpacked product files
 /migrate-rootfs-utilities-*/
+
+# Don't track fake destination root filesystem used in tests
+/test-dest/
